--- a/write_up/MH_twosided_logit.tex
+++ b/write_up/MH_twosided_logit.tex
@@ -56,7 +56,7 @@ Matching structure:
 
 \section{Updating the opportunity set}
 
-We update the opportunity set by sampling $J^*(i)$ as a new job to be considered for worker $i$. The M-H acceptance ratio is $rr1 \times rr2$. To calculate $rr1, rr2$ for worker $i$:
+We update the opportunity set by sampling $J^*(i)$ as a new job to be considered for worker $i$. The M-H acceptance ratio is $rr1 \times rr2$, with $rr1$ coming from $P(A|O, \alpha)$ and $rr2$ coming from $P(O|\beta)$. To calculate $rr1, rr2$ for worker $i$:
 
 \begin{align}
 den_i &= \sum_{j: j \in O_i} \exp(
