--- a/write_up/MH_twosided_logit.tex
+++ b/write_up/MH_twosided_logit.tex
@@ -1,54 +1,11 @@
-\documentclass[12pt]{article}
+\section{The Utility Model}
 
-\usepackage[margin=1in]{geometry}  % set the margins to 1in on all sides
-\usepackage{graphicx}              % to include figures
-\usepackage{amsmath}               % great math stuff
-\usepackage{amsfonts}              % for blackboard bold, etc
-\usepackage{amsthm}                % better theorem environments
-\usepackage{bm} % \bm for bold math
+\subsection{Officials' Utility}
 
-\usepackage{enumitem}
-\usepackage{rotating} % for sideway table
-\usepackage{caption} % for newline in caption
-\usepackage{xcolor}
-\usepackage{hyperref}
-\hypersetup{
-    colorlinks,
-    linkcolor={red!50!black},
-    citecolor={blue!50!black},
-    urlcolor={blue!80!black}
-}
-\usepackage{cleveref}
-
-\usepackage{array,tabularx}
-  
-\usepackage{float}
-\restylefloat{table}
-
-% bibliography
-\usepackage{natbib}
-\bibpunct{(}{)}{;}{a}{}{,} % no comma between author and year
-
-\title{Metropolis-Hasting for two-sided logit}
-\author{Anh Le}
-
-
-\begin{document}
-\maketitle
-
-
-\section{Introduction}
-
-We introduce a model that can estimate the utility of both sides, building from their utility function up.
-
-\section{Utility}
-
-\subsection{Officials' utility}
-
-Following \citet{Logan1998}, we consider the utility function of the two actors, the official and the firm.\footnote{For ease of exposition, in this section I will refer to country $j$ as official $j$} For official $j$, the utility of having firm $i$ investing in his country is:
+Following \citet{Logan1998}, we consider the utility function of the two actors, the official and the firm.\footnote{For ease of exposition, in this section I will refer to country $j$ and official $j$ interchangeably.} For official $j$, the utility of having firm $i$ investing in his country is:
 
 \begin{align}
-U_j(i) &= \bm{\beta}_j' X_i + \epsilon_{1ij} \\
+U_j(i) &= \bm{\beta}_j' X_i + \epsilon_{1ij}
 \end{align}
 
 where
@@ -72,9 +29,9 @@ b_j &\text{ is the baseline utility of official $j$ without any firm investing} 
 \epsilon_{0ij} &\text{ is the component that influences official $j$'s utility}
 \end{align*}
 
-For each firm $i$, official $j$ will make an offer to invest if $U_j(i) > U_j(\neg i)$. Some relevant firm characteristics (i.e. $X_i$) that the official may consider are: the potential for spillover, jobs, and capital. The corresponding $\beta$'s represent the official's preference for these characteristics.
+For each firm $i$, official $j$ will make an offer to invest if $U_j(i) > U_j(\neg i)$. Some relevant firm characteristics (i.e. $X_i$) that the official may consider are: technological intensity, jobs, and capital. The corresponding $\beta$'s represent the official's preference for these characteristics.
 
-Following the discrete choice literature, if we model $\epsilon_{1ij}, \epsilon_{0ij}$ as having the type I extreme distribution, the probability of official $j$ making an offer to firm $i$ is the familiar binomial logit:
+Following the discrete choice literature, we model $\epsilon_{1ij}, \epsilon_{0ij}$ as having the Gumbel distribution. Then, the probability of official $j$ making an offer to firm $i$ takes the familiar binomial logit form:
 
 \begin{align}
 Pr(o_{ij} = 1) &= Pr(U_j(i) > U_j(\neg i)) \\
@@ -82,15 +39,17 @@ Pr(o_{ij} = 1) &= Pr(U_j(i) > U_j(\neg i)) \\
 &= \frac{\exp({\bm{\beta}_j'X_i})}{1 + \exp({\bm{\beta}_j'X_i})} \label{eq:prob_offer_ij}
 \end{align}
 
-where \Cref{eq:prob_offer_ij} is due to the fact that the difference between two type I extreme error has a logistic distribution. We can absorb the constant term $b_j$ into $X_i$ by adding an intercept column into $X_i$.
+where \Cref{eq:prob_offer_ij} is due to the fact that the difference between two Gumbel-distributed random variables has a logistic distribution. We make the constant term $b_j$ disappear into $\bm{\beta}_j$ by adding an intercept column to the matrix of firm characteristics $X_i$.
 
-The probability that firm $j$ gets an opportunity set $j$ is:
+The opportunity set of firm $i$ is the set of all countries that have made firm $i$ an offer. If we know the preferences of all countries, we can calculate the probability that firm $i$ gets an opportunity set $O_i$ as follows:
 
 \begin{align}
 p(O_i | \bm{\beta}) &= \prod_{j \in O_i} p(o_{ij} = 1 | \bm{\beta}) \prod_{j \notin O_i} p(o_{ij} = 0 | \bm{\beta}) \\
 &= \prod_{j \in O_i} \frac{\exp(\bm{\beta_j} ' X_i)}{1 + \exp(\bm{\beta_j}' X_i)}
  \prod_{j \notin O_i} \frac{\exp(\bm{\beta_j} ' X_i)}{1 + \exp(\bm{\beta_j}' X_i)} \label{eq:conditional_probability_of_offer}
 \end{align}
+
+In our observed data, since we only observe the final matching of firms and countries, this opportunity set is unobserved. This is the gist of the statistical challenge. TO overcome this issue, we will use Markov chain Monte Carlo to sample from and approximate $p(O_i | \bm \beta)$.
 
 \subsection{Firms' utility}
 
@@ -103,140 +62,32 @@ V_i(j) &= \alpha' W_{j} + v_{ij}
 where
 
 \begin{align*}
-\alpha &= \text{a vector of firms' preference for relevant characteristics of countries} \\
-w_{ij} &= \text{a vector of country $j$ measured values on those characteristics} \\
-v_{ij} &= \text{unobserved component that influences firm $i$'s utility}
+\alpha &\text{ is a vector of firms' preference for relevant characteristics of countries} \\
+W_j &\text{ is a vector of country $j$ measured values on those characteristics} \\
+v_{ij} &\text{ is the unobserved component that influences firm $i$'s utility}
 \end{align*}
 
-Firm $i$ evaluates all the countries that make an offer and chooses the one that brings the highest utility. In our model, the relevant country characteristics are: labor quality, infrastructure, and market size. Since all firms are considered having homogeneous preferences, $\alpha$ does not have a subscript $i$. The model can be easily extended so that there is heterogeneous preference among firms.
+Firm $i$ evaluates all the countries that make an offer and chooses the one that brings the highest utility. In our model, the relevant country characteristics are: labor quality, level of development, and market size. Since all firms are considered having homogeneous preferences, $\alpha$ does not have a subscript $i$. The model can be easily extended so that there is heterogeneous preference among firms.
 
-If $v_{ij}$ is modeled as having a type I extreme error distribution, then the probability that firm $i$ will accept the offer of official $j$ out of all the offers it has in its opportunity set $O_i$ is
+If $v_{ij}$ is modeled as having a Gumbel distribution, then the probability that firm $i$ will accept the offer of official $j$ out of all the offers in its opportunity set $O_i$ is
 
 \begin{align}
 p(A_i = a_i | O_i, \alpha_i) = \frac{\exp(\alpha'W_{a_i})}{\sum\limits_{j:j \in O_i} \exp(\alpha'W_j)} \label{eq:conditional_probability_of_accept}
 \end{align}
 
-\section{Estimate the actors' preference}
+\section{Model Estimation}
 \label{sec:tsl_estimate}
 
-EM algorithm does not produce standard error.
+While \citet{Logan1996, Logan1998} successfully reformulated standard discrete choice models to a two-sided setting, the estimation of the two-sided model remains challenging. The key difficulty lies in the fact that we do not know the full sets of offers that firms receive from countries. Therefore, the likelihood function is incomplete, missing the data on firms' opportunity sets. With an incomplete likelihood function, we cannot use Maximum Likelihood Estimation to estimate firms' and countries' preferences.
 
-Our data contains a random sample of firms and the countries in which they invest. We want to find the parameters that maximize the likelihood of this observed data. This likelihood is:
+To deal with this problem, \cite{Logan1996} used the Expectation-Maximization (EM) algorithm.\footnote{The EM algorithm finds the best parameter estimates by iterating between two steps. First, given the current best guess of firms' and countries' preferences, pick values for the unobserved opportunity sets so that we maximize the likelihood. Second, given the current best guess of the unobserved opportunity sets, taken from step 1, pick values for firms' and countries' preferences so that we maximize the likelihood. By iterating between these two steps, the algorithm constantly searches for parameters values that maximize the likelihood.} However, an important downside of the EM algorithm is its lack of standard error. Therefore, while the algorithm is capable of producing the best estimate for the parameters of interest, it is difficult to know how good our best guess really is.
+
+To overcome this difficulty, I use a Bayesian approach that provides the posterior distribution of the parameters. Firms' opportunity sets, firms' preferences, and countries' preferences are all considered random variables. I estimate their posterior distributions using the Metropolis-Hastings algorithm, which samples from the desired distribution by proposing new values and decide whether to those values. 
+
+For example, suppose we want to sample from the posterior distribution $p(\theta)$ and we already had a working collection of values $\{\theta^{1}, \dots, \theta^{(s)}\}$. To add new values to this collection, we would propose a new value $\theta^*$, then decide whether to keep it with the probability $\frac{p(\theta^*)}{p(\theta)}$. The intuition is that if $\frac{p(\theta^*)}{p(\theta)}$ is large, then $\theta^*$ is very likely compared to $\theta$ given $p(\theta)$. Thus, we should keep $\theta^*$ and add it to the collection. In other words, we decide to keep newly proposed values of $\theta$ at a rate proportional to how often they should appear according to $p(\theta)$. Repeating this step many times, at the end we will have a collection of $\theta$ values that approximates $p(\theta)$ as desired.
+
+\Cref{appendix:MH_ratio} describes the details of our Bayesian model and derives the Metropolis-Hastings acceptance ratio. The key points are that we use flat priors so that our results are driven entirely by the data. The joint distribution of the data and parameters, including the opportunity sets, the firms' and countries' preferences, factor out nicely:
 
 \[
-L = \prod_{i,j: \text{i is matched with j}} Pr(A_{ij})
+p(A_i, O_i, \alpha, \bm{\beta}) = p(A_i|O_i, \alpha) p(O_i | \bm{\beta})
 \]
-
-where $Pr(A_{ij})$ is the probability of a specific match between firm $i$ and country $j$. $Pr(A_{ij})$ can be calculated as follows:
-
-\begin{align}
-&Pr(A_{ij}) \\
-&= \sum_{k=1}^R Pr(A_{ij}|S_{ik}) Pr(S_{ik}) \\
-&= \sum_{k=1}^R Pr(A_{ij} | S_{ik}) \prod_{m \in O_k} Pr(o_{im} = 1) \prod_{n \in \bar O_k} Pr(o_{in} = 0) \\
-&= \sum_{k:j \in O_k} \frac{\exp(\alpha w_{ij})}{\displaystyle\sum_{h \in O_k} \exp(\alpha w_{ih})} \prod_{m \in O_k, m > 0} \frac{\exp(\beta x_{i})}{1 + \exp(\beta x_i)} \\
-&\times \prod_{n \in \bar O_k, n > 0} \frac{1}{1 + \exp(\beta x_i)}
-\end{align}
-
-Here, the term $Pr(o_{ij} = 1)$ represents the probability that country $j$ makes an offer to firm $i$, through which the official's preference enters our estimation. On the other side, $Pr(A_{ij}) | S_{ik}$ is the probability that firm $i$ will accept the offer from official $j$, given the offering set $O_k$. The firm's preference is reflected in our estimation through this term, $Pr(A_{ij})|S_{ik}$.\footnote{The appendix shows how these terms are derived.}
-
-It is important to note that the offering set $O_k$ contains \textit{all} offers that firm $i$ receives, only one of which is the observed match between firm $i$ and country $j$. The intuition is that if we observe the full set of offers that all officials make to all firms, then by looking at the final match we can see how firms and officials reject inferior offers and thus deduce their preferences.
-
-\section{Update opportunity set}
-
-Target distribution for a firm $i$ 
-
-\begin{align}
-p(O_i | A_i, \alpha, \bm{\beta}) &= \frac{p(O_i, A_i, \alpha, \bm{\beta})}{p(A_i, \alpha, \bm{\beta})}
-\end{align}
-
-We propose a new $O_i^*$ by randomly sample a new offer, $j^*$ for each firm. If the new offer is not already in the current opportunity set, we add the offer to the set. If it already is in the opportunity set, we remove it from the set.
-
-We then calculate the Metropolis-Hasting acceptance ratio:
-
-\begin{align}
-MH_O = \frac{p(O_i^* | A_i, \alpha, \bm{\beta})}{p(O_i | A_i, \alpha, \bm{\beta})} &= \frac{p(O_i^*, A_i, \alpha, \bm{\beta})}{p(A_i, \alpha, \bm{\beta})} \times \frac{p(A_i, \alpha, \bm{\beta})}{p(O_i, A_i, \alpha, \bm{\beta})} \\
-&= \frac{p(O_i^*, A_i, \alpha, \bm{\beta})}{p(O_i, A_i, \alpha, \bm{\beta})} \\
-&= \frac{p(A_i | O_i^*, \alpha)p(O_i^*|\bm{\beta})}{p(A_i | O_i, \alpha)p(O_i|\bm{\beta})} \label{eq:updateO_joint_dist_into_conditional_dist} \\
-\end{align}
-
-where the factorization of the likelihood in \Cref{eq:updateO_joint_dist_into_conditional_dist} is due to the fact that the acceptance of firm $i$ only depends on what is offered to it and what is its preference, $p(A_i | O_i^*, \alpha)$; what is offered to $i$ depends on the preferences of all countries, $p(O_i^* \ \bm{\beta})$.
-
-If we plug in \Cref{eq:conditional_probability_of_accept} and \Cref{eq:conditional_probability_of_offer}
-
-\begin{align}
-\frac{p(O_i^* | A_i, \alpha, \bm{\beta})}{p(O_i | A_i, \alpha, \bm{\beta})} &= \frac{\sum\limits_{j:j \in O_i} \exp(\alpha'W_j)}{\sum\limits_{j:j \in O_i} \exp(\alpha'W_j) + \exp(\alpha' W_{j^*})} \times \exp(\bm{\beta}_{j^*}'X_i)
-\end{align}
-
-where $j^*$ is the index of the newly sampled job. This is the case when the newly proposed job is not already offered, so it's added to the opportunity set.
-
-When the newly proposed job is already offered, so it's removed from the opportunity set, we have
-
-\begin{align}
-\frac{p(O_i^* | A_i, \alpha, \bm{\beta})}{p(O_i | A_i, \alpha, \bm{\beta})} &= \frac{\sum\limits_{j:j \in O_i} \exp(\alpha'W_j)}{\sum\limits_{j:j \in O_i} \exp(\alpha'W_j) - \exp(\alpha' W_{j^*})} \times -\exp(\bm{\beta}_{j^*}'X_i)
-\end{align}
-
-\section{Update firms' parameters, $\alpha$}
-
-Target distribution:
-
-\begin{align}
-p(\alpha | A, O, \bm{\beta}) &= \frac{p(O, A, \alpha, \bm{\beta})}{p(A, O, \bm{\beta})}
-\end{align}
-
-We propose a new $\alpha^*$ using a symmetric proposal distribution that sample $\alpha^*$ in a box whose boundary is $\alpha^* \pm \epsilon_\alpha$
-
-Metropolis-Hasting acceptance ratio:
-
-\begin{align}
-MH_\alpha = \frac{p(\alpha^* | A, O, \bm{\beta})}{p(\alpha | A, O, \bm{\beta})} &= \frac{p(A_i | O_i, \alpha^*)p(O_i|\bm{\beta})}{p(A_i | O_i, \alpha)p(O_i|\bm{\beta})} \\
-&= \frac{p(A_i | O_i, \alpha^*)}{p(A_i | O_i, \alpha)} \label{eq:updatealpha_MHratio_final}
-\end{align}
-
-where \Cref{eq:updatealpha_MHratio_final} is due to the flat prior (so $\frac{p(\alpha^*)}{p(\alpha)}=1$) and the symmetric proposal distribution (so $\frac{p(\alpha^*|\alpha)}{p(\alpha|\alpha^*)} = 1$)
-
-If we plug in \Cref{eq:conditional_probability_of_accept},
-
-\begin{align}
-MH_\alpha &= \prod_i \left[ \frac{\exp(\alpha^{*\prime} W_{a_i})}{\exp(\alpha' W_{a_i})} \times \frac{\sum\limits_{j:j \in O_i} \exp(\alpha' W_j)}{\sum\limits_{j:j \in O_i} \exp(\alpha^{*\prime}W_j)} \right] \\
-&= \prod_i \left[ \exp(\epsilon_\alpha ' W_{a_i}) \times \frac{\sum\limits_{j:j \in O_i} \exp(\alpha' W_j)}{\sum\limits_{j:j \in O_i} \exp(\alpha^{*\prime}W_j)} \right]
-\end{align}
-
-Finally, we log transform the MH acceptance ratio for numerical stability.
-
-\begin{align}
-\log MH_\alpha &= \sum_i \left[ \epsilon_\alpha' W_{a_i} + \log\left(\sum\limits_{j:j \in O_i} \exp(\alpha' W_j)\right) - \log\left(\sum\limits_{j:j \in O_i} \exp(\alpha^{*\prime} W_j)\right) \right]
-\end{align}
-
-\section{Update countries' parameters, \texorpdfstring{$\boldmath\beta$}{}}
-
-Target distribution:
-
-\begin{align}
-p(\bm{\beta}|A, O, \alpha) &= \frac{p(O, A, \alpha, \bm{\beta})}{p(A, O, \alpha)}
-\end{align}
-
-We propose a new $\bm{\beta}^*$ using a symmetric proposal distribution that sample $\bm{\beta}^*$ in a box with side length $\epsilon_\beta$
-
-Metropolis-Hasting acceptance ratio:
-
-\begin{align}
-MH_\beta = \frac{p(\beta^* | A, O, \alpha)}{p(\beta | A, O, \alpha)} &= \frac{p(A_i | O_i, \alpha)p(O_i|\bm{\beta}^*)}{p(A_i | O_i, \alpha)p(O_i|\bm{\beta})} \label{eq:updatebeta_MHratio_simplify} \\
-&= \frac{p(O_i|\bm{\beta}^*)}{p(O_i|\bm{\beta})} \label{eq:updatebeta_MHratio_final}
-\end{align}
-
-where \Cref{eq:updatebeta_MHratio_simplify} is due to the flat prior on $\beta$ and the symmetric proposal distribution.
-
-We plug in \Cref{eq:conditional_probability_of_offer},
-
-\begin{align}
-MH_\beta &= \prod_i \left[ \prod\limits_{j \in O_j}\frac{ \exp(\beta_j^{*\prime}X_i)}{ \exp(\beta_j^{\prime}X_i)} \times \prod\limits_{j}\frac{1 + \exp(\beta_j^{*\prime}X_i)}{1 + \exp(\beta_j^{\prime}X_i)} \right] \\
-\log MH_\beta &= \sum_i \left[ \sum_{j \in O_i} \beta_j^{*\prime}X_i - \beta_j^{\prime}X_i + \sum_{j} \log(1 + {\exp({\beta_j^{*\prime}X_i})) - \log(1 +  \exp(\beta_j^{\prime}X_i})) \right]
-\end{align}
-
-In the MCMC implementation, since $\bm{\beta}$ is high dimensional, we conduct multiple block Metropolis Hastings, updating several $\beta$'s at one time.
-
-\clearpage
-\bibliographystyle{chicago}
-\bibliography{library}
-
-\end{document}
