--- a/write_up/method_advantage.tex
+++ b/write_up/method_advantage.tex
@@ -1,4 +1,46 @@
 \section{Literature}
 
+My paper addresses two issues.
 
-1. FDI aggregate data is not clear about what it means to be foreign. IMF decides 10\% is the line between foreign portfolio investment and FDI
+First is the aggregate nature of FDI data used by political science research.
+
+FDI flow exclude locally raised finance data. This is appropriate for the purpose of measuring balance of payment, but not so much when we care about the actual size of the foreign firms in the country (808).
+
+FDI stock at market value fluctuates based on market price as well, something unrelated to the FDI firm behavior. FDI stock at historical value is simply the accumulation of FDI flow (as other countries calculate it).
+
+Most of FDI literature has used FDI flow \citep{Jensen2003, Ahlquist2006, Beazer2011, Graham2010}. Some debate on measuring FDI, but it's on outliers and FDI or FDI/GDP \citep{Li2009}
+
+Second, it allows us to get at the preferences of country. Previously, most of the research is on the preference of firms. Only two works by Pondya and Pablo Pinto looks at the other side.
+
+The theoretical interest is there as scholars start to fill in the other side of the equation. However, the empirics left wanting.
+
+Pondya used US Investment climate report to code how many industries have foreign ownership restriction. First, the raw number of industries being restricted are not equal. Industries are not the same, depending on the nature of the industry and how it fits into the country's development strategy. For example, opening up the country's financial industry is much more of a big deal than allowing furniture companies to join. Second, the omission of foreign industry is construed as a 100\% free. This can lead to serious bias as a country's FDI into an industry is so non-existent that it is not worth discussing. So what is a lackluster industry is coded in the data as 100\% open.
+
+For example, China 1979 permit FDI only as joint venture in SEZ, 1986 allow wholly owned FDI outside of SEZ, 1990 protection from nationalization, CEO no longer has to be appointed by a Chinese board.
+
+https://www.imf.org/external/pubs/ft/pdp/2002/pdp03.pdf
+
+http://law.wisc.edu/gls/documents/foreign_investment1.pdf
+- Initially, until the early 1970s, when the level of FDI was low, the
+government was quite willing to allow 100 per cent foreign ownership, especially
+in the assembly industries in free trade zones which were established in 1970.
+
+- Korea o begin with, there were policies that restricted the areas where TNCs could
+enter. Until as late as the early 1980s, around 50 per cent of all industries and
+around 20 per cent of the manufacturing industries were still ‘off-limits’ to FDI
+[EPB,  1981:  70 – 1].  Even  when  entry  was  allowed,  the  government  tried  to
+encourage  joint  ventures,  preferably  under  local  majority  ownership,  in  an
+attempt to facilitate the transfer of core technologies and managerial skills
+
+There is also export requirement, local content requirement. It's very hard to check all of these (cite the paper about non-trade barrier \citep{Grieco2000)} \citep{Hufbauer2013}
+
+The second attempt by Pablo Pinto is to measure FDI regime openness. He tries to go for statistical technique instead of measuring something substantive. In the first stage, he estimates country fixed effect in a regression model that uses FDI flow as the dependent variable and a bunch of dyadic variables. In the second stage: he takes the intercept from the first stage, i.e. the fixed effect, and regress it on that year covariates. The residual is considered "FDI regime openness" for that country year. The problems with FDI flows as usual, it is questionable whether it is okay to consider the residual term "FDI regime openness". There are many other factors that can affect FDI flow, anything that is not included go into this residual term. To make this claim, beyond the already strong assumption of no endogeneity, it is actually claiming that the model capture absolutely everything that is not FDI regime openness. This is a very strong claim.
+
+All of these models also cannot investigate countries' preference for specific firms' characteristics. Pondya's look at cross industry, but because of data issue she can only do cross-sectional at the industry level instead of country-industry level. This level of aggregation is dubious: the same industry in one country is different from another country. For example, automobile value chain is vastly different across countries (example here)
+
+All of the industry estimates are based on US firms, which really cannot be realized to others. (It can for some basic industry characteristics / technology level, not for whether an industry is market oriented or not.)
+
+My data use capital size, which is great because that's exactly what countries look for. 
+
+
+\citep[295]{Yamawaki1991} says that the data ``list virtually all the foreign subsidiaries of Japanese companies''
