fix not saving all beta

--- a/write_up/AnhLe_political_determinants_FDI.tex
+++ b/write_up/AnhLe_political_determinants_FDI.tex
@@ -42,9 +42,7 @@
 
 \input{MH_twosided_logit}
 
-\section{Results}
-
-Host GDP is negative, host GDP per capita is positive, host democracy is positive, agree with \citep{Eicher2012}
+\input{Result}
 
 \newpage
 \appendix
